# Macaw

./: .gitignore  CHANGELOG.md  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml  windows.yml
contrib/: macaw.desktop  macaw.service
macaw-slint/: Cargo.toml  build.rs
macaw-slint/src/: bars.rs  engine.rs  hypr.rs  ls.rs  main.rs  single.rs  theme.rs  tray-icon-24.argb  tray.rs  ws.rs
macaw-slint/ui/: app.slint  appearance.slint  easy.slint  llm.slint  models.slint  onboarding.slint  overlay.slint  picker.slint  pill.slint  providers.slint  settings.slint  theme.slint  widgets.slint
packaging/appimage/: README.md  build.sh
packaging/aur/: PKGBUILD  bump.sh  macaw.install
packaging/engine/: macaw-engine.spec
packaging/windows/: entry.py  macaw.nsi  macaw.spec
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/macaw/: __main__.py  _hotkey_win.py  cli.py  config.py  desktop.py  engine.py  hardware.py  hotkey.py  net.py  secrets.py  service.py  trigger.py
src/macaw/audio/: capture.py  transcriber.py
src/macaw/gui/: download.py  equalizer.py  icon.py  inputtool.py  install.py  main_window.py  models_tab.py  settings.py  settings_tab.py  shortcut.py  theme.py  widgets.py  window.py
src/macaw/llm/: __init__.py  base.py  catalog.py  formatter.py  isolated.py  llamacpp.py  nlp.py  nlp_worker.py  openai.py  prompts.py  providers.py  registry.py  rules.py  worker.py
src/macaw/llm/models/: cloud.yaml  local.yaml  nlp.yaml  rules.yaml
src/macaw/stt/: __init__.py  base.py  catalog.py  cloud.py  deps.py  isolated.py  moonshine.py  moonshine2.py  nemo.py  registry.py  sherpa.py  voxtral.py  whisper.py  worker.py
src/macaw/stt/models/: cloud.yaml  moonshine.yaml  moonshine2.yaml  nemo.yaml  sherpa.yaml  voxtral.yaml  whisper.yaml
tests/: test_config.py  test_crash_async.py  test_engine.py  test_hardware.py  test_hotkey.py  test_inputtool.py  test_language_and_star.py  test_llm.py  test_model_card.py  test_model_ops.py  test_model_retry.py  test_network_startup.py  test_new_backends.py  test_overlay_theme.py  test_settings_apply.py  test_stt.py  test_windows_port.py
ui/: index.html  overlay.html  package.json  tsconfig.json  vite.config.ts
ui/src/: base.css  main.ts  models.css  models.ts  overlay.css  overlay.ts  settings.css  settings.ts  theme.ts  ws.ts
website/: .gitignore  Dockerfile  index.html  start.sh  tailwind.config.cjs
website/scripts/: icons.js
