[project]
name = "macaw"
version = "0.1.0"
description = "Fast speech-to-text with system tray integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"  # onnxruntime/CUDA wheels lag new CPython; raise ceiling when 3.14 wheels ship
dependencies = [
    "faster-whisper>=1.1.0",
    "onnxruntime>=1.20,<1.24",
    "numpy>=2.0.0",
    "pyperclip>=1.9.0",
    "pyqt6>=6.7.0",
    "pyzmq>=26.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "sounddevice>=0.5.0",
]

[project.optional-dependencies]
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]
rocm = []  # ROCm CTranslate2 wheel installed by install.sh from GitHub releases

# Extra STT backends (see src/macaw/stt/). Each is optional; the base install
# ships Whisper only. Install e.g. `uv tool install "macaw[moonshine]"`.
moonshine = [
    "useful-moonshine-onnx",
]
nemo = [  # Parakeet TDT + Canary-Qwen — needs a CUDA GPU
    "nemo_toolkit[asr]>=2.0",
    # Steer resolution to a modern numba/llvmlite with Python 3.13 wheels;
    # without this uv backtracks to numba 0.53 (no 3.10+ support, source build).
    "numba>=0.60",
]
voxtral = [  # Mistral Voxtral
    "transformers>=4.56",
    "mistral-common[audio]>=1.8",
    "torch",
    "accelerate",
]

[project.scripts]
macaw = "macaw.cli:main"
macaw-trigger = "macaw.trigger:main"
macaw-cli = "macaw.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/macaw"]

[tool.ruff]
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
