[project]
name = "macaw"
version = "0.4.3"
description = "Fast speech-to-text with system tray integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"  # onnxruntime/CUDA wheels lag new CPython; raise ceiling when 3.14 wheels ship
dependencies = [
    "faster-whisper>=1.1.0",
    "onnxruntime>=1.20,<1.24",
    "numpy>=2.0.0",
    "pyperclip>=1.9.0",
    "pyzmq>=26.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "sounddevice>=0.5.0",
    "websockets>=12",
]

[project.optional-dependencies]
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]
rocm = []  # ROCm CTranslate2 wheel installed by install.sh from GitHub releases

# Extra STT backends (see src/macaw/stt/). Each is optional; the base install
# ships Whisper only. Install e.g. `uv tool install "macaw[moonshine]"`.
moonshine = [
    "useful-moonshine-onnx",
]
moonshine2 = [  # Moonshine v2 streaming (.ort via bundled C lib) — CPU, isolated venv
    "moonshine-voice>=0.0.68",
    "numpy>=2.0.0",
]
nemo = [  # Parakeet TDT + Canary-Qwen — needs a CUDA GPU
    "nemo_toolkit[asr]>=2.0",
    # Without cuda-python NeMo silently disables CUDA-graph decoding and logs
    # "Cuda graphs with while loops are disabled" — a 3-5x decode slowdown.
    "cuda-python>=12.3",
    # Steer resolution to a modern numba/llvmlite with Python 3.13 wheels;
    # without this uv backtracks to numba 0.53 (no 3.10+ support, source build).
    "numba>=0.60",
]
voxtral = [  # Mistral Voxtral
    "transformers>=4.56",
    "mistral-common[audio]>=1.8",
    "torch",
    "accelerate",
]
sherpa = [  # sherpa-onnx ONNX models (Zipformer/Paraformer/Parakeet/Nemotron) — CPU, isolated venv
    # >=1.13.0: Nemotron cache-aware streaming support (added 1.12.22) + fixes
    "sherpa-onnx>=1.13.0",
    "numpy>=2.0.0",           # required at runtime but not declared by sherpa-onnx
    "huggingface-hub>=0.20",  # fetches the ONNX weights on first use
]
openai = [  # GPT-4o cloud transcription — installs into the MAIN env, no isolated venv
    "openai>=1.0",
]
hotkey = [  # global shortcut listener — evdev reads the kernel input layer,
    "evdev>=1.6; sys_platform == 'linux'",  # X11 + every Wayland compositor
]

[project.scripts]
macaw = "macaw.cli:main"
macaw-cli = "macaw.cli:main"
macaw-engine = "macaw.engine:main"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pre-commit>=4.0",
    "pytest>=8",
    "evdev>=1.6; sys_platform == 'linux'",  # hotkey tests (real ecodes); Windows skips via importorskip
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/macaw"]

[tool.ruff]
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
