[package]
name = "macaw"
version = "0.3.0"
description = "Macaw — local speech-to-text"
edition = "2021"

[lib]
name = "macaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
# Overlay positioning on Wayland: wlr-layer-shell via dlopen — no build-time
# system dep; falls back to normal toplevel when the lib isn't installed.
libloading = "0.8"
gtk = "0.18"  # must match tao's gtk version (window.gtk_window() types)

[profile.release]
strip = true
lto = true
